# objectivism-library-semantic-search

./: .gitignore  =20  =2023  BATCH_API_GUIDE.md  CLAUDE.md  Canon.json  METADATA_SCHEMA.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  debug_batch_api.py  extract_all_files.py  extraction_log.txt  extraction_log_fixed.txt  extraction_log_live.txt  extraction_log_new.txt  implement_parallel.py  monitor_extraction.py  pyproject.toml  show_metadata.py  stability_report.txt  verify-phase3.sh  verify_metadata.py
.claude/: README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
benchmarks/: bench_fsm.py  results-mitigation-20260222-114707.json
config/: library_config.json  metadata_mappings.json  scanner_config.json
data/: library.db-shm  retrieval-fix-manifest.json  wave1_checkpoint.json  wave1_selection.json
examples/: example_queries.py
governance/: pre-mortem-framework.md  pre-mortem-gemini-fsm.md  store-sync-contract.md
journal/: 2026-02-25.md  2026-02-26.md  2026-02-27.md  INSTRUCTIONS.md
scripts/: README.md  check_stability.py  check_status.sh  crad_algorithm.py  crad_full_run.py  crad_pilot.py  measure_searchability_lag.py  migrate_phase8.py  monitor_enriched_upload.sh  monitor_extraction.sh  monitor_upload.sh  phase163_intervention_test.py  qsearch  re_enrich_office_hours.py  re_enrich_retrieval.py  re_upload_phase164.py  retrievability_audit.py  smart-search.py  test_book_extraction.py  validate_s4.py  verify-phase3.sh  watch_progress.sh
src/: 01_scan_library.py  02_upload_to_gemini.py  03_query_interface.py
tests/: conftest.py  test_browse_filter.py  test_database.py  test_database_crud.py  test_entity_extraction.py  test_expansion.py  (+17 more)
(+487 files in other folders)
