[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "objlib"
version = "0.1.0"
description = "Objectivism Library semantic search scanner and metadata extractor"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
objlib = "objlib.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/objlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
